[package]
name = "netops"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossbeam = "0.8.4"
crossterm = "0.28.1"
maxminddb = "0.23"
hickory-resolver = { version = "0.24.1", features = ["tokio", "system-config"] }
internet-checksum = "0.2.1"
pnet = "0.35.0"
pnet_datalink = "0.35.0"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
socket2 = "0.6.1"
surge-ping = "0.8.3"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1.48.0", features = ["full"] }
tui-input = "0.14.0"
